# VASE

./: .gitignore  README.md  pyproject.toml  requirements.txt
LongBench/: pred.py
LongBench/config/: model2maxlen.json  model2path.json
LongBench/pred/llama2-7b-chat-4k/: gov_report.jsonl  result.json
LongBench/pred/medusa-vicuna-7b-v1.3/: gov_report.jsonl  multi_news.jsonl  qmsum.jsonl  result.json
LongBench/pred/vicuna-v1.3-7b/: gov_report.jsonl  multi_news.jsonl  qasper.jsonl  qmsum.jsonl  result.json
Spec-Bench/: equal.sh  eval.sh  eval_llama2_13b.sh  eval_llama2_7b.sh  eval_llama3_8b.sh  eval_vicuna.sh  eval_vicuna_13b.sh  eval_vicuna_33b.sh  eval_vicuna_7b.sh  speedup.sh
Spec-Bench/evaluation/: eval.py  eval_llama2.py  eval_llama3.py  inference_baseline.py  inference_kangaroo.py  inference_medusa.py  inference_ssd.py
Spec-Bench/model/eagle2/: cnets.py  ea_model.py
Spec-Bench/model/kangaroo/: adapter.py  kangaroo_model.py
Spec-Bench/model/medusa/: kv_cache.py  medusa_model.py  (+1 more)
gen_data/: allocation.py  gen_data_all_llama2.py  gen_data_all_llama3.py  gen_data_all_vicuna.py  shell.sh
gen_tree/: gen_results.py  heads_accuracy.py  shell.sh
gen_tree/data/: llama2-7b-chat-24-3_heads_accuracy.pt  vicuna-7b-v1.3-24-3_heads_accuracy.pt
general_bench/: answer_llama2.py  answer_llama3.py  answer_vicuna.py  shell.sh
train/: ds_config.json  main.py  main_1.py  main_wo_base.py  train_llama2.sh  train_llama2_13b.sh  train_llama2_7b.sh  train_llama3.sh  train_vicuna.sh  train_vicuna_13b.sh  train_vicuna_33b.sh  train_vicuna_7b.sh
train/wandb/: latest-run
(+56 files in other folders)
